# graduate_work

./: .dockerignore  .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  rabbit_test_publish.py  requirements.txt
.github/workflows/: python.yaml
admin_panel/: Dockerfile  requirements.txt
admin_panel/config/: settings.py
admin_panel/config/components/: database.py  installed_apps.py
admin_panel/loyalty/: admin.py  models.py
deploy/: logstash.conf
filebeat_auth/: Dockerfile  filebeat.yml
filebeat_loyalty/: filebeat.yml
filebeat_nginx/: filebeat.yml
loyalty_service/: Dockerfile  requirements.txt
loyalty_service/src/: main.py
loyalty_service/src/alembic/: env.py
loyalty_service/src/alembic/versions/: 11d619981896_initial_migration.py  9c1f99fa2531_initial.py  b81917e69699_update_foreign_keys_and_relationships.py  d204131a9410_initial.py  d9893597df8c_update_dt.py  f141f46b0371_removt_timezone_true.py
loyalty_service/src/api/v1/: discount.py  promocode.py  utils.py
loyalty_service/src/api/v1/schemas/: general.py
loyalty_service/src/broker/: broker_connection.py  callbacks.py  validator.py
loyalty_service/src/core/: config.py  logging_setup.py  middleware.py
loyalty_service/src/db/: db_factory.py
loyalty_service/src/logs/: fastapi-elk-stack.json
loyalty_service/src/models/: auth.py  broker_models.py  common.py  db_models.py  responses.py
loyalty_service/src/services/: discount.py  json.py  promocode.py
nginx/: default.conf  nginx.conf
tests/functional/: Dockerfile  conftest.py  docker-compose.yml  requirements.txt  settings.py  utils.py
tests/functional/src/: test_discounts.py  test_promocodes.py
tests/functional/testdata/: __init__.py  discounts.py  promocodes.py
