[tool.poetry]
name = "graduate-work"
version = "0.1.0"
description = ""
authors = ["Liza Tishkovets, Oleg Rubtsov"]
readme = "README.md"
packages = [{include = "graduate_work"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
