[tool.poetry]
name = "loyalty-service"
version = "0.1.0"
description = ""
authors = ["Liza Tishkovets, Oleg Rubtsov"]
readme = "README.md"
packages = [{ include = "loyalty_service" }]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.9.2"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
pydantic = { extras = ["dotenv"], version = "^1.10.4" }
orjson = "^3.8.5"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
contextvars = "^2.4"
requests = "^2.28.2"
pika = "^1.3.1"
aio-pika = "^8.3.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"
flask-jwt-extended = "^4.4.4"
pytest-mock = "^3.10.0"
greenlet = "^2.0.2"
Django = "^4.1.6"
SQLAlchemy = { extras = ["mypy"], version = "^2.0.1" }
motor = "^3.1.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
pydantic = { extras = ["dotenv"], version = "^1.10.4" }
orjson = "^3.8.5"
psycopg2 = "^2.9.5"
asyncpg = "^0.27.0"
contextvars = "^2.4"
requests = "^2.28.2"
pika = "^1.3.1"
aio-pika = "^8.3.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

